# distributed-file-storage

./: .env  .session.json  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yaml  docker-compose.yml  prometheus.yml
.github/workflows/: docker.yml  rust.yml
src/: cli.rs  distribution.rs  grpc_server.rs  handlers.rs  main.rs  network.rs  node_service.rs  routers.rs  services.rs
src/cache/: mod.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs
src/db/: chunk_nodes.rs  file_chunks.rs  files.rs  mod.rs  nodes.rs  queries.rs  users.rs
src/models/: chunk_node.rs  file.rs  file_chunk.rs  mod.rs  node.rs
src/node/: communication.rs  mod.rs  node_discovery.rs
src/proto/: file_storage.proto  mod.rs
src/service/: mod.rs
src/services/: auth_service.rs  file_service.rs  mod.rs
src/utils/: cache.rs  config.rs  jwt.rs  mod.rs
