[package]
name = "distributed-file-storage"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }
libp2p = { version = "0.50.0", features = ["tcp", "dns", "mdns", "identify", "gossipsub", "yamux", "noise"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.16.0"
jsonwebtoken = "9.3.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
clap = { version = "4.1.8", features = ["derive"] }
thiserror = "2.0.6"
log = "0.4"
env_logger = "0.11.5"
dotenv = "0.15.0"
hashring = "0.3.6"
md5 = "0.7.0"
rand = "0.8.5"
warp = "0.3"
reqwest = { version = "0.12.9", features = ["json", "multipart"] }
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
prometheus = "0.13.4"
tonic = "0.12.3"
prost = "0.13.4"
prost-types = "0.13.4"
bytes = "1.5"
lazy_static = "1.5.0"
anyhow = "1.0.94"
dirs = "5.0.1"
async-io = "2.4.0"

[build-dependencies]
tonic-build = "0.12.3"
