[package]
name = "distributed-file-storage"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "node_service"
path = "src/node_service.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.16.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
dotenv = "0.15.0"
anyhow = "1.0.94"
rand = "0.8.5"
md5 = "0.7.0"
jsonwebtoken = "9.3.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12.9", features = ["json"] }
clap = { version = "4.5.23", features = ["derive"] }
